--- a/app/src/main/res/layout/activity_seleccionar_reporte_consumo.xml
+++ b/app/src/main/res/layout/activity_seleccionar_reporte_consumo.xml
@@ -70,58 +70,80 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginTop="20dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginBottom="10dp"
             android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/tvFechaD"
-                android:layout_width="150dp"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:fontFamily="sans-serif"
+                android:layout_marginRight="7dp"
+                android:gravity="center_vertical|center_horizontal"
                 android:text="Desde:"
-                android:textAlignment="center"
-                android:textColor="#070707"
-                android:textSize="22sp" />
+                android:textColor="@color/black"
+                android:textSize="18sp" />
 
-            <EditText
-                android:id="@+id/edtFechDesdeCnsm"
-                android:layout_width="250dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:text="Seleccionar Fecha"
-                android:fontFamily="sans-serif"
-                android:textAlignment="center"
-                android:textColor="#070707"
-                android:textSize="20sp" />
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/tilFechDesdeCnsm"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Seleccionar Fecha"
+                app:boxStrokeColor="@color/azul"
+                app:hintTextColor="@color/azul">
+                <EditText
+                    android:id="@+id/edtFechDesdeCnsm"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text=""
+                    android:fontFamily="sans-serif"
+                    android:textAlignment="center"
+                    android:textColor="@color/azulOscuro"
+                    android:textSize="18sp" />
+
+            </com.google.android.material.textfield.TextInputLayout>
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginTop="20dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
             android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/tvFechaP"
-                android:layout_width="150dp"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:fontFamily="sans-serif"
-                android:text="Hasta"
-                android:textAlignment="center"
-                android:textColor="#070707"
-                android:textSize="22sp" />
+                android:gravity="center_vertical|center_horizontal"
+                android:text="Hasta:"
+                android:layout_marginRight="9.5dp"
+                android:textColor="@color/black"
+                android:textSize="18sp" />
 
-            <EditText
-                android:id="@+id/edtFechHastaCnsm"
-                android:layout_width="250dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:text="Seleccionar Fecha"
-                android:fontFamily="sans-serif"
-                android:textAlignment="center"
-                android:textColor="#070707"
-                android:textSize="20sp" />
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/tilFechHastaCnsm"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Seleccionar Fecha"
+                app:boxStrokeColor="@color/azul"
+                app:hintTextColor="@color/azul">
+                <EditText
+                    android:id="@+id/edtFechHastaCnsm"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:textAlignment="center"
+                    android:textColor="@color/azulOscuro"
+                    android:textSize="18sp" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
         </LinearLayout>
 
         <Button
