--- a/app/src/main/res/layout/activity_detalle_reporte_cons.xml
+++ b/app/src/main/res/layout/activity_detalle_reporte_cons.xml
@@ -125,10 +125,12 @@
 
 
                         <TableRow
+                            android:id="@+id/TR_Encabezado"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content">
 
                             <TextView
+                                android:id="@+id/tv_TrCampo1"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:text="Productos"
@@ -136,6 +138,7 @@
                                 android:textSize="18sp" />
 
                             <TextView
+                                android:id="@+id/tv_TrCampo2"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:gravity="center"
@@ -144,6 +147,7 @@
                                 android:textSize="18sp" />
 
                             <TextView
+                                android:id="@+id/tv_TrCampo3"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
